# py_quant

./: README.md  pyproject.toml
examples/: bollinger_band_strat.ipynb  coint.py  half_life.py  hurst_exponent.ipynb  hurst_exponent.py  simple_linear_strat.ipynb
py_quant/: hurst_exponent.py
py_quant/mean_reversion/: coint.py  halflife.py  hurst_exponent.py
util/: array.py  math.py
