[project]
name = "py_quant"
version = "0.1.0"
description = ""
authors = [{ name = "Joon Kang", email = "denim.bluu@gmail.com" }]
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "scipy>=1.9.3",
    "plotly>=5.16.1",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.28",
    "hurst>=0.0.5",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.0"]
lint = ["flake8>=6.1.0", "black>=23.7.0", "mypy>=1.5.1"]
dev = [
    "notebook>=7.0.2",
    "ipython>=8.14.0",
    "ptpython>=3.0.23",
    "jupyter>=1.0.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
